--- a/hall/build.gradle
+++ b/hall/build.gradle
@@ -1,1 +1,5 @@
 description = 'Hall application'
+dependencies {
+    compile "io.ktor:ktor-server-netty:$ktor_version"
+    compile "io.ktor:ktor-gson:$ktor_version"
+}
