--- a/hall/build.gradle
+++ b/hall/build.gradle
@@ -2,4 +2,5 @@ description = 'Hall application'
 dependencies {
     compile "io.ktor:ktor-server-netty:$ktor_version"
     compile "io.ktor:ktor-gson:$ktor_version"
+    testCompile "io.ktor:ktor-server-test-host:$ktor_version"
 }
