cinema: postgre database, schema, grant

--- a/hall/src/main/resources/application.conf
+++ b/hall/src/main/resources/application.conf
@@ -5,3 +5,19 @@ ktor {
         port = ${?PORT}
     }
 }
+
+postgres {
+    auth {
+        user = "cinema"
+        password = "cinemapass"
+    }
+    hall {
+        url = "jdbc:postgresql://127.0.0.1:5432/hall"
+    }
+    session {
+        url = "jdbc:postgresql://127.0.0.1:5432/session"
+    }
+    ticket {
+        url = "jdbc:postgresql://127.0.0.1:5432/ticket"
+    }
+}
