testcontainers: still not works

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     ext.kotlin_version = '1.4.0'
     ext.ktor_version = '1.4.0'
     ext.jdbc_version = '42.2.16'
-    ext.testcontainers_version = '1.15.0-rc1'
+    ext.tc_version = '1.15.0-rc1'
     repositories {
         mavenCentral()
     }
