--- a/hall/build.gradle
+++ b/hall/build.gradle
@@ -4,5 +4,5 @@ dependencies {
     compile "io.ktor:ktor-gson:$ktor_version"
     compile "org.postgresql:postgresql:$jdbc_version"
     testCompile "io.ktor:ktor-server-test-host:$ktor_version"
-    testCompile "org.testcontainers:postgresql:$testcontainers_version"
+    testCompile "org.testcontainers:postgresql:$tc_version"
 }
