--- a/hall/build.gradle
+++ b/hall/build.gradle
@@ -1,8 +1,18 @@
 description = 'Hall application'
+
 dependencies {
     compile "io.ktor:ktor-server-netty:$ktor_version"
     compile "io.ktor:ktor-gson:$ktor_version"
     compile "org.postgresql:postgresql:$jdbc_version"
     testCompile "io.ktor:ktor-server-test-host:$ktor_version"
     testCompile "org.testcontainers:postgresql:$tc_version"
+}
+
+jar {
+    manifest {
+        attributes "Main-Class": "org.mgaidamak.HallAppKt"
+    }
+}
+
+shadowJar {
 }
