docker compose cinema: it works

--- a/hall/src/main/resources/application.conf
+++ b/hall/src/main/resources/application.conf
@@ -12,6 +12,8 @@ postgres {
     }
     hall {
         url = "jdbc:postgresql://127.0.0.1:5432/hall"
+        # To override at docker-compose
+        url = ${?SQLURL}
     }
     session {
         url = "jdbc:postgresql://127.0.0.1:5432/session"
