--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,18 +7,20 @@ services:
   postgresql:
     image: postgres:12
     volumes:
+      # Use docker rm if need to re-create
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       - POSTGRES_USER=cinema
       - POSTGRES_PASSWORD=cinemapass
-    # host:container
-    ports:
-      - "5432:5432"
+    restart: always
     networks:
       - test_network
   hall:
     image: cinema-hall
+    environment:
+      - SQLURL=jdbc:postgresql://postgresql:5432/hall
     ports:
+      # host:container
       - "8081:8080"
     networks:
       - test_network
