--- a/session/src/main/resources/application.conf
+++ b/session/src/main/resources/application.conf
@@ -6,9 +6,9 @@ ktor {
 }
 
 postgres {
-    url = "jdbc:postgresql://127.0.0.1:5432/hall"
+    url = "jdbc:postgresql://127.0.0.1:5432/session"
     user = "cinema"
     password = "cinemapass"
     # To override at docker-compose
-    url = ${?HALLSQL}
+    url = ${?SESSIONSQL}
 }
