--- a/public/src/main/resources/application.conf
+++ b/public/src/main/resources/application.conf
@@ -5,8 +5,10 @@ ktor {
     }
 }
 
-cinema {
-    url = "http://127.0.0.1:8080"
+hall {
+    host = "127.0.0.1"
+    port = 8080
     # To override at docker-compose
-    url = ${?CINEMAURL}
+    host = ${?HALLHOST}
+    port = ${?HALLPORT}
 }
