--- a/public/build.gradle
+++ b/public/build.gradle
@@ -3,6 +3,9 @@ description = 'Public application'
 dependencies {
     compile "io.ktor:ktor-server-netty:$ktor_version"
     compile "io.ktor:ktor-gson:$ktor_version"
+    compile "io.ktor:ktor-client-cio:$ktor_version"
+//    compile "io.ktor:ktor-client-json:$ktor_version"
+    compile "io.ktor:ktor-client-gson:$ktor_version"
     testCompile "io.ktor:ktor-server-test-host:$ktor_version"
 }
 
